<resources>
    <string name="app_name">Samediscare Printer App</string>
    <string name="printer_note"><b>Note: </b> Printer Not Connected. Please check the bluetooth connection and try again.</string>
    <string name="paper_note"><b>Note: </b> Please select the appropriate paper size for the printer.</string>
    <string name="select_paper">Label format</string>
    <string name="select_url">qr</string>
    <string name="select_id">nr</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="model"> Model </string>
    <string name="models">Model:</string>
    <string name="labelsize">Label Size:</string>
    <string name="status">Status:</string>
    <string name="preview">Preview</string>
    <string name="printer">Printer</string>
    <string name="save">Save</string>
    <string name="test_print">Test Print</string>
    <string name="bluetooth">Blue Tooth</string>
    <string name="key_address">address</string>
    <string name="key_paper_size">paper_size</string>
    <string name="key_pos">pos</string>
    <string name="select_printer">Select Printer</string>
    <string name="key_paper_pos">paper_pos</string>
    <string name="app_common_accept">Accept</string>
    <string name="app_common_deny">Deny</string>
    <string name="app_common_yes">Yes</string>
    <string name="app_common_no">No</string>
    <string name="app_permission_allow_in_settings">Please allow permission from setting</string>
    <string name="key_paper_size_Name">paper_size_name</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="printing">Printing...</string>
    <string name="printer_bluetooth_off">Printer bluetooth off</string>
    <string name="device_bluetooth_off">Device bluetooth off</string>
    <string name="communication_error">Communication error</string>
    <string name="unknown_error">Something went wrong.</string>
    <string name="success">Print successfully</string>
    <string name="data_saved">Settings saved successfully.</string>
    <string name="selected_printer">Selected printer</string>
    <string name="empty_qr">QR not found.</string>
    <string name="pair_device">Please pair bluetooth device or start Bluetooth</string>
</resources>