<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SettingFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dim_20">

        <Switch
            android:id="@+id/switch_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dim_20"
            android:layoutDirection="rtl"
            android:switchPadding="@dimen/dim_20"
            android:text="@string/bluetooth"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold"
            android:visibility="gone"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_button"
            android:layout_marginBottom="@dimen/dim_20"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/bluetooth"
            app:switchPadding="@dimen/dim_20"
            android:layoutDirection="rtl"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold"
            app:track="@drawable/custom_track"
            android:thumb="@drawable/custom_thumb"
            />
        <Button
            android:id="@+id/btnGet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:text="Get Paired Devices"
            android:layout_below="@+id/switch_button"/>
        <RelativeLayout
            android:id="@+id/rl_printerList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnGet"
            android:layout_marginTop="@dimen/dim_10">

            <TextView
                android:id="@+id/label_printer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dim_10"
                android:text="@string/selected_printer">

            </TextView>
            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_50"
                android:layout_below="@+id/label_printer"
                android:background="@drawable/spinner_background"
                android:spinnerMode="dropdown"
                />

            <ImageView
                android:layout_width="@dimen/dim_50"
                android:layout_height="@dimen/dim_50"
                android:layout_alignBottom="@+id/spinner"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_baseline_arrow_drop_down_24"
                app:tint="@color/colorPrimary" />

            <TextView
                android:id="@+id/label_printer_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_10"
                android:textColor="@color/dark_gray"
                android:layout_below="@+id/spinner"
                android:visibility="gone"
                android:text="@string/printer_note">

            </TextView>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_paperList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_printerList"
            android:layout_marginTop="@dimen/dim_20">

            <TextView
                android:id="@+id/label_paper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dim_10"
                android:text="@string/select_paper">

            </TextView>

            <Spinner
                android:id="@+id/paperSpinner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_50"
                android:background="@drawable/spinner_background"
                android:spinnerMode="dropdown"
                android:layout_below="@+id/label_paper"
                />
            <ImageView
                android:layout_width="@dimen/dim_50"
                android:layout_height="@dimen/dim_50"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_alignBottom="@+id/paperSpinner"
                android:src="@drawable/ic_baseline_arrow_drop_down_24"
                app:tint="@color/colorPrimary" />
            <TextView
                android:id="@+id/label_printer_paper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dim_10"
                android:layout_marginTop="@dimen/dim_10"
                android:textColor="@color/dark_gray"
                android:layout_below="@+id/paperSpinner"
                android:text="@string/paper_note">
            </TextView>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dim_05"
            android:background="@drawable/button_rel_border"
            android:layout_marginTop="@dimen/dim_50"
            android:layout_alignParentBottom="true"
            >
            <com.google.android.material.button.MaterialButton
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                app:backgroundTint="@color/button_color"
                android:layout_marginLeft="@dimen/dim_30"
                app:cornerRadius="10dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/testPrint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_print"
                app:backgroundTint="@color/button_color"
                android:layout_marginRight="@dimen/dim_30"
                android:layout_alignParentRight="true"
                app:cornerRadius="10dp" />
        </RelativeLayout>


    </RelativeLayout>
</FrameLayout>