<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dim_20">

    <Button
        android:id="@+id/btnGet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:text="Get Paired Devices" />
      <RelativeLayout
          android:id="@+id/rl_printerList"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/btnGet"
          android:layout_marginTop="@dimen/dim_10">

          <TextView
              android:id="@+id/label_printer"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="@dimen/dim_10"
              android:text="Select printer">

          </TextView>
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_50"
            android:layout_below="@+id/label_printer"
            android:background="@drawable/spinner_background"
            android:spinnerMode="dropdown"
            />
        <ImageView
            android:layout_width="@dimen/dim_50"
            android:layout_height="@dimen/dim_50"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_baseline_arrow_drop_down_24"
            android:layout_alignBottom="@+id/spinner"
            app:tint="@color/colorPrimary" />
          <TextView
              android:id="@+id/label_printer_note"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/dim_10"
              android:textColor="@color/dark_gray"
              android:layout_below="@+id/spinner"
              android:visibility="gone"
              android:text="@string/printer_note">

          </TextView>
      </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_paperList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_printerList"
        android:layout_marginTop="@dimen/dim_20">

        <TextView
            android:id="@+id/label_paper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dim_10"
            android:text="@string/select_paper">

        </TextView>

        <Spinner
            android:id="@+id/paperSpinner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_50"
            android:background="@drawable/spinner_background"
            android:spinnerMode="dropdown"
            android:layout_below="@+id/label_paper"
            />
        <ImageView
            android:layout_width="@dimen/dim_50"
            android:layout_height="@dimen/dim_50"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_alignBottom="@+id/paperSpinner"
            android:src="@drawable/ic_baseline_arrow_drop_down_24"
            app:tint="@color/colorPrimary" />
        <TextView
            android:id="@+id/label_printer_paper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dim_10"
            android:layout_marginTop="@dimen/dim_10"
            android:textColor="@color/dark_gray"
            android:layout_below="@+id/paperSpinner"
            android:text="@string/paper_note">
        </TextView>
    </RelativeLayout>

</RelativeLayout>